--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
                 <button class="btn btn-warning btn-sm" id="btn">here</button></h1>
                 <div id="output"></div>
                 <p class="lead my-4 ">
-                    Frontend Web developer
-                    
+                    Frontend Web developer <br>
+                    09072210193 <br>
+                    Ondo State, Nigeria 
                 </p> <div> <h5 class="fq">[favourite quote]</h5>
                 <p class="bs"> <i>"Busy and happy all day was she, Helpful and happy as child could be."I love you, mother," again they said, Three 
                     little children going to bed. How do you think that mother guessed which of them really loved her best?  <br><u>Joy Allison</u>
