--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     JavaScript 70% <br>
                     BOOTSTRAP 95% <br>
                     ILLUSTRATOR 60% <br>
-                    VUE JS 45%
+                    React JS 45%
                     
                 
             </p>
