--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <h3 class="card-title mb-3">Profile</h3>
                 <p class="card-text">
-                    My love for tech is limiteless, with this i love learning latest skills to improve
+                    My love for tech is limitless, with this i love learning latest skills to improve
                     my frontend mastery through engaging in challenges and collaborating with senior developers
                     to create solutions to problems faced by startups and tech giants .
                 </p>
